added buttons electro

--- a/music/electro.html
+++ b/music/electro.html
@@ -53,13 +53,10 @@
                 <span class="source">Source : Wikipédia </span>
             </div>
         </section>
-
         <section class="no-top-separator">
-
             <h2>
                 Quelques Dj les plus connus aujourd'hui
             </h2>
-
             <article id="Avicii">
                 <h3>
                     <span class="multi-link">
@@ -92,7 +89,6 @@
                     Ses principaux titres sont wake me up, I could be the one, SOS.
                     <span class="source">Source : Wikipédia </span>
                 </div>
-
                 <div class="spotify-integ">
                     <div>
                         <iframe src="https://open.spotify.com/embed/track/4h8VwCb1MTGoLKueQ1WgbD"
@@ -109,13 +105,12 @@
                             </div>
                         </div>
                     </div>
-
                     <figcaption>
                         Wake me up, qui comptabilise plus d'1.8 milliards de vues.
                     </figcaption>
                 </figure>
+                <span class="button"><a href="#">Retour en haut de la page !</a></span>
             </article>
-
             <article id="Martin_Garrix">
                 <h3>
                     <span class="multi-link ">
@@ -168,8 +163,8 @@
                         Animals, qui compte plus d'1.3 milliards de vues.
                     </figcaption>
                 </figure>
+                <span class="button"><a href="#">Retour en haut de la page !</a></span>
             </article>
-
             <article id="Tiësto">
                 <h3>
                     <span class="multi-link">
@@ -230,6 +225,7 @@
                         mixer après la cérémonie du podium au sein du stadium.
                     </figcaption>
                 </figure>
+                <span class="button"><a href="#">Retour en haut de la page !</a></span>
             </article>
             <article id="today">
                 <h3>
@@ -246,6 +242,7 @@
                     Deadmau5, The Chainsmokers, Skrillex, et beaucoup d'autres.
                     <span class="source">Source : Wikipédia </span>
                 </div>
+                <span class="button"><a href="#">Retour en haut de la page !</a></span>
             </article>
         </section>
     </main>
