fixed alt.html multi-link

--- a/music/alternative.html
+++ b/music/alternative.html
@@ -217,7 +217,7 @@
                 <h3>
                     <span class="multi-link">
                         <span>Arctic Monkeys</span>
-                        <span class="multi-link">
+                        <span class="ml-content">
                             <a href="https://open.spotify.com/artist/7Ln80lUS6He07XvHI8qqHH" target="_blank"><img
                                     class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
                             <a href="https://fr.wikipedia.org/wiki/Arctic_Monkeys" target="_blank"><img
@@ -398,7 +398,7 @@
                 <h3>
                     <span class="multi-link">
                         <span>Imagine Dragons</span>
-                        <span class="multi-link">
+                        <span class="ml-content">
                             <a href="https://open.spotify.com/artist/53XhwfbYqKCa1cC15pYq2q" target="_blank"><img
                                     class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
                             <a href="https://fr.wikipedia.org/wiki/Imagine_Dragons" target="_blank"><img
@@ -543,7 +543,7 @@
                 <h3>
                     <span class="multi-link">
                         <span>The White Strips</span>
-                        <span class="multi-link">
+                        <span class="ml-content">
                             <a href="https://open.spotify.com/artist/4F84IBURUo98rz4r61KF70" target="_blank"><img
                                     class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
                             <a href="https://fr.wikipedia.org/wiki/The_White_Stripes" target="_blank"><img
@@ -717,7 +717,7 @@
                 <h3>
                     <span class="multi-link">
                         <span>Cage The Elephant</span>
-                        <span class="multi-link">
+                        <span class="ml-content">
                             <a href="https://open.spotify.com/artist/26T3LtbuGT1Fu9m0eRq5X3" target="_blank"><img
                                     class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
                             <a href="https://fr.wikipedia.org/wiki/Cage_the_Elephant" target="_blank"><img
@@ -870,7 +870,7 @@
                 <h3>
                     <span class="multi-link">
                         <span>Caesars</span>
-                        <span class="multi-link">
+                        <span class="ml-content">
                             <a href="https://open.spotify.com/artist/4rGrN4XDYhP6dUAZMvcuHr" target="_blank"><img
                                     class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
                             <a href="https://fr.wikipedia.org/wiki/Caesars" target="_blank"><img class="wiki-icon"
@@ -1025,7 +1025,7 @@
                 <h3>
                     <span class="multi-link">
                         <span>X Ambassadors</span>
-                        <span class="multi-link">
+                        <span class="ml-content">
                             <a href="https://open.spotify.com/artist/3NPpFNZtSTHheNBaWC82rB" target="_blank"><img
                                     class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
                             <a href="https://fr.wikipedia.org/wiki/X_Ambassadors" target="_blank"><img class="wiki-icon"
@@ -1128,7 +1128,7 @@
                 <h3>
                     <span class="multi-link">
                         <span>Twenty One Pilots</span>
-                        <span class="multi-link">
+                        <span class="ml-content">
                             <a href="https://open.spotify.com/artist/3YQKmKGau1PzlVlkL1iodx" target="_blank"><img
                                     class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
                             <a href="https://fr.wikipedia.org/wiki/Twenty_One_Pilots" target="_blank"><img
