--- a/music/pop.html
+++ b/music/pop.html
@@ -62,7 +62,7 @@
                   </div>. La pop est toujours accessible
                   au grand public, ce qui se caractérise par des mélodies et harmonies vocaliques. Elle pioche ses
                   influences dans différents styles (R&B, jazz, folk, soul, funk, classique, techno, latino…). Les
-                  chanteurs chantent souvent sur les sentiments et sur la relation homme/femme : « I don ‘t want to
+                  chanteurs chantent souvent sur les sentiments et sur la relation homme/femme : « I don't want to
                   leave her now, You know I believe her now », qui se traduit par « Je ne veux pas la quitter
                   maintenant, tu sais que je la crois maintenant ». Ce titre, "Something", chanté par
                   <div class="multi-link">
@@ -195,7 +195,7 @@
               </h2>
               <div class="paragraph">
                   Le Pop Rock, mêlant le style Pop et Rock, est basé sur la guitare. Le pop Rock est plus doux et plus
-                  accessible que le <a href="rock.html#">Rock and Roll</a>. C‘est une version plus commerciale dans le
+                  accessible que le <a href="rock.html#">Rock and Roll</a>. C'est une version plus commerciale dans le
                   domaine de la musique et ceux qui écoutent
                   sont souvent des jeunes. Les instruments utilisés sont le plus souvent la guitare électrique, la
                   basse, la batterie, le clavier et le synthétiseur.
@@ -363,7 +363,7 @@
                   atmosphérique du rock alternatif qui repose autant sur les textures sonores que sur les mélodies ».
                   Les caractéristiques sonores de la dream pop sont un chant murmuré, ainsi que l'utilisation d'effets
                   de guitare produisant souvent un « mur de bruit ». Dans la dream Pop, le plus important c’est
-                  l’ambiance qu’il crée. L‘utilisation d’effets de guitare produit souvent un « mur de bruit ». Quand on
+                  l’ambiance qu’il crée. L'utilisation d’effets de guitare produit souvent un « mur de bruit ». Quand on
                   écoute la dream pop, on pense souvent à de belles choses dans la vie : des fleurs, des rêves, des
                   beaux paysages etc. Le livre « The All music Guide to Electronica » définit la dream pop comme « un
                   sous-genre atmosphérique du rock alternatif qui repose autant sur les textures sonores que sur les
@@ -560,7 +560,7 @@
                   La K-pop possède un large spectre musical mais aussi visuel. L'Institut National de l'Audiovisuel
                   français, l'INA, définit la K-pop comme étant une "musique de synthèse accompagnée de chorégraphies
                   calibrées au millimètre, portée par des chanteurs séduisants, à la pointe de la mode". Les chansons
-                  sont des mélanges de pop, rock, hip hop et de musique électronique. C‘est souvent populaire parmi les
+                  sont des mélanges de pop, rock, hip hop et de musique électronique. C'est souvent populaire parmi les
                   jeunes filles.
               </div>
               <span class="source">Source : fr.wikipedia.org/wiki/K-pop</span>
@@ -701,7 +701,7 @@
               <div class="paragraph">
                   Moins agressif, moins commercial, mais plus sérieux que la musique de l’époque, la pop baroque utilise
                   une instrumentation de musique classique, sa structure simpliste est plus proche de la pop standard.
-                  Il est plus accessible que la musique classique. C ‘est une musique traditionnellement mélancolique et
+                  Il est plus accessible que la musique classique. C'est une musique traditionnellement mélancolique et
                   dramatique par rapport au sunshine pop.
               </div>
               <span class="source">Source : fr.wikipedia.org/wiki/Pop_baroque</span>
@@ -759,7 +759,7 @@
                   populaire dans la vie quotidienne. Les chansons sont jolies et simples, tout le monde peut les
                   écouter et partager leurs émotions sur la musique.
                   La création est toujours essentielle dans la musique pop, ce qui mène à créer des nouveaux
-                  types de musique et la mode dans le monde .
+                  types de musique et la mode dans le monde.
               </div>
               <span class="button"><a href="#">Retour en haut de la page !</a></span>
           </section>
