added today rock

--- a/music/rock.html
+++ b/music/rock.html
@@ -36,8 +36,7 @@
             <div class="paragraph">
                 Le rock est un style dérivé du jazz, apparu dans les années 50. Apparu sous la forme du rock'n'roll,
                 il ressemble alors à un mélange de jazz, de blues, de country, mais aussi de bluegrass (style de music
-                américain) avec certaines influences folk ou européennes non négligeables. Depuis, le rock a évolué et
-                est devenu un style de musique très varié, majeur et omniprésent depuis le milieu du siècle précédent.
+                américain) avec certaines influences folk ou européennes non négligeables.
                 <div class="multi-link">
                     <span>Bill Haley</span>
                     <div>
@@ -553,7 +552,7 @@
                     Adaptable à tout plein de genre musicaux, le terme d’« indépendant » est parfois utilisé pour
                     désigner de façon générale les musiques indépendantes, produites par des petits labels. Tout comme
                     le rock alternatif et le pop rock, le rock indépendant est varié au point de réunir sous son toit
-                    des artistes fichtrement différents :
+                    des artistes différents :
                     <div class="multi-link">
                         <span>les Cranberries</span>
                         <div>
@@ -586,8 +585,7 @@
                             <a href="https://www.youtube.com/user/FallOutBoyVEVO" target="_blank"><img class="yt-icon"
                                     src="../images/icons/yt.png" alt="youtube link" /></a>
                         </div>
-                    </div>
-                    et
+                    </div> et
                     <div class="multi-link">
                         <span>Panic! at the disco</span>
                         <div>
@@ -635,19 +633,32 @@
                             </div>
                         </div>
                         <div>
-                                <div>
-                                    <iframe src="https://www.youtube-nocookie.com/embed/LBr7kECsjcQ"
-                                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                                        allowfullscreen></iframe>
-                                </div>
+                            <div>
+                                <iframe src="https://www.youtube-nocookie.com/embed/LBr7kECsjcQ"
+                                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen></iframe>
                             </div>
+                        </div>
                     </div>
                     <figcaption>
-                        Californication des Red Hot Chili Peppers (1999), Zombie des Cranberries (1993) et Centuries de Fall Out Boy (2015)
+                        Californication des Red Hot Chili Peppers (1999), Zombie des Cranberries (1993) et Centuries de
+                        Fall Out Boy (2015)
                     </figcaption>
                 </figure>
                 <span class="button"><a href="#">Retour en haut de la page !</a></span>
             </article>
+        </section>
+        <section>
+            <h2>Le rock aujourd'hui</h2>
+            <div class="paragraph">
+                Le rock à bien évolué : on est passé d'un mélange entre du jazz, de blues et de country à un rock qui
+                est tellement varié qu'il est méconnaissable quand il n'est pas associé à un autre style
+                (comme la pop). Malgré tout, le rock a une place importante dans la musique et a été "père"
+                de beaucoup de sous genres (comme le <a href="metal.html">metal et ses sous-genres</a>) La plupart du
+                temps, les chansons ont message à faire passer (plus ou moins fort).
+            </div>
+            <span class="source">Source : dude trust me</span>
+            <span class="button"><a href="#">Retour en haut de la page !</a></span>
         </section>
     </main>
     <footer>
