rap.html -> paragraph are overflow and figure inside para

--- a/music/rap.html
+++ b/music/rap.html
@@ -95,14 +95,14 @@
                         </span>
                     </span>
                 </h3>
-                <figure class="no-overflow float-right bordered img-align">
-                    <img src="../images/columbine.jpg" alt="logo columbine" width="200" class="rounded-corners" />
-                    <figcaption>
-                        Le logo du groupe, «colombe-Kalash» <br /> ( kalachnikov, le fusil d'assaut russe
-                        AK-47).
-                    </figcaption>
-                </figure>
-                <div class="paragraph">
+                <div class="paragraph no-overflow">
+                    <figure class="float-right bordered img-align">
+                        <img src="../images/columbine.jpg" alt="logo columbine" width="200" class="rounded-corners" />
+                        <figcaption>
+                            Le logo du groupe, «colombe-Kalash» <br /> ( kalachnikov, le fusil d'assaut russe
+                            AK-47).
+                        </figcaption>
+                    </figure>
                     Groupe de rap français formé en 2014, originaire de la banlieue de Rennes, leur troisième
                     album Adieu bientôt a été certifié disque de platine.
                     Leur titres les plus connus sont pierre, feuille, papier, ciseau; c'est pas grave, adieu
@@ -146,18 +146,18 @@
                         </span>
                     </span>
                 </h3>
-                <figure class="float-right bordered">
-                    <img src="../images/nekfeu.jpg" alt="nekfeu" width="200" class="rounded-corners" />
-                    <figcaption>
-                        Nekfeu
-                    </figcaption>
-                </figure>
-                <div class="paragraph">
+                <div class="paragraph no-overflow">
+                    <figure class="float-right bordered">
+                        <img src="../images/nekfeu.jpg" alt="nekfeu" width="200" class="rounded-corners" />
+                        <figcaption>
+                            Nekfeu
+                        </figcaption>
+                    </figure>
                     Membre du collectif l'Entourage, a également fait partie de 5 Majeur.
                     Son dernier album, les étoiles vagabondes, est certifié triple disque de platine. Ses
                     principaux titres sont princesse, on verra, ma dope.
                 </div>
-                <span class="source">Source : Wikipédia </span>
+                <span class="source">Source : Wikipédia</span>
                 <div class="spotify-integ">
                     <div>
                         <iframe src="https://open.spotify.com/embed/track/57I5KhEpQFC9XBgKt6nklL"
@@ -194,13 +194,13 @@
                         </span>
                     </span>
                 </h3>
-                <figure class="float-right bordered img-align">
-                    <img src="../images/pnl.jpg" alt="PNL" width="200" class="rounded-corners" />
-                    <figcaption>
-                        La pochette de leur dernier album, deux frères.
-                    </figcaption>
-                </figure>
-                <div class="paragraph">
+                <div class="paragraph no-overflow">
+                    <figure class="float-right bordered img-align">
+                        <img src="../images/pnl.jpg" alt="PNL" width="200" class="rounded-corners" />
+                        <figcaption>
+                            La pochette de leur dernier album, deux frères.
+                        </figcaption>
+                    </figure>
                     Sigle de Peace N’ Lovés, PNL est un groupe de rap français indépendant, composé de deux
                     frères,
                     Ademo et N.O.S (de leurs vrais noms Tarik et Nabil Andrieu).
@@ -210,7 +210,7 @@
                     Mi-août 2019, l'album "deux frères" devient triple disque de platine avec plus de 300 000
                     ventes.
                 </div>
-                <span class="source">Source : Wikipédia </span>
+                <span class="source">Source : Wikipédia</span>
                 <div class="spotify-integ">
                     <div>
                         <iframe src="https://open.spotify.com/embed/track/5lCxlSBFyP5g4EhVypAoOu"
@@ -247,13 +247,13 @@
                         </span>
                     </span>
                 </h3>
-                <figure class="float-right bordered">
-                    <img src="../images/orelsan.jpg" alt="orelsan" width="200" class="rounded-corners" />
-                    <figcaption>
-                        Orelsan
-                    </figcaption>
-                </figure>
-                <div class="paragraph">
+                <div class="paragraph no-overflow">
+                    <figure class="float-right bordered">
+                        <img src="../images/orelsan.jpg" alt="orelsan" width="200" class="rounded-corners" />
+                        <figcaption>
+                            Orelsan
+                        </figcaption>
+                    </figure>
                     Membre des Casseurs-Flowteurs avec son ami Gringe et voix française de Saitama dans l'animé One
                     Punch Man, il sort en 2017 le titre "basique", avant de sortir
                     l'album la fête est finie, certifié disque de diamant. Orelsan a remporté trois
@@ -457,7 +457,7 @@
                 Le rap occupe 14 des 20 premières places du classement des artistes français les plus écoutés en
                 streaming, ce qui en fait le genre de musique le plus populaire en France.
                 Les rappeurs les plus riches aujourd'hui sont: <br />
-                Lil Wayne,Ice Cube, Ronald  'Slim’ Williams, Eminem, Master P, Kanye West, Russell Simmons, Dr.
+                Lil Wayne,Ice Cube, Ronald 'Slim’ Williams, Eminem, Master P, Kanye West, Russell Simmons, Dr.
                 Dre, Sean Combs (Diddy), JAY-Z, et bien d'autres.
                 <span class="source">Sources : la-croix.com, newsmonkey.be </span>
             </div>
