some fixes on githubpages

--- a/nav.html
+++ b/nav.html
@@ -16,7 +16,7 @@
     <nav class="header-nav">
         <ul>
             <li>
-                <a href="/">
+                <a href="/Pulse/#">
                     <img src="images/icons/index.png" alt="icon item 00" />
                     <div class="nav-text">Accueil</div>
                 </a>
@@ -80,9 +80,9 @@
                         </a>
                     </li>
                     <li>
-                        <a href="..">
-                            <img src="images/icons/about.png" alt="icon item 21" />
-                            <div class="nav-text">A propos</div>
+                        <a href="/">
+                            <img src="/res/icon.ico" alt="icon item 21" />
+                            <div class="nav-text">Retour au sites</div>
                         </a>
                     </li>
                 </ul>
