--- a/nav.html
+++ b/nav.html
@@ -82,7 +82,7 @@
                     <li>
                         <a href="/">
                             <img src="/res/icon.ico" alt="icon item 21" />
-                            <div class="nav-text">Retour au sites</div>
+                            <div class="nav-text">Retour à <em>oxypomme.github.io</em></div>
                         </a>
                     </li>
                 </ul>
